[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/UIManager/UIManager.gd" type="Script" id=1]
[ext_resource path="res://src/UIManager/InfoPlane/SelectionInfo/Notes.gd" type="Script" id=2]
[ext_resource path="res://src/UIManager/InfoPlane/SelectionInfo/SelectionPanel.gd" type="Script" id=3]
[ext_resource path="res://src/UIManager/InfoPlane/SelectionInfo/Connections.gd" type="Script" id=4]
[ext_resource path="res://src/UIManager/InfoPlane/InfoPlane.gd" type="Script" id=5]
[ext_resource path="res://src/UIManager/InfoPlane/GraphInfo/GraphInfo.gd" type="Script" id=6]
[ext_resource path="res://src/UIManager/InfoPlane/GraphInfo/NodeEntry.gd" type="Script" id=7]
[ext_resource path="res://src/UIManager/InfoPlane/GraphInfo/Nodes.gd" type="Script" id=8]
[ext_resource path="res://src/UIManager/InfoPlane/SelectionInfo/Entry.gd" type="Script" id=9]
[ext_resource path="res://src/UIManager/InfoPlane/Toolbar.gd" type="Script" id=10]
[ext_resource path="res://scenes/GraphManager.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/ToolManager.tscn" type="PackedScene" id=12]

[node name="UIManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="MenuBar" type="Panel" parent="UI"]
anchor_right = 1.0
margin_bottom = 30.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MenuBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0

[node name="File" type="MenuButton" parent="UI/MenuBar/HBoxContainer"]
margin_right = 35.0
margin_bottom = 30.0
text = "File"
items = [ "Save Project", null, 0, false, false, 0, 0, null, "", false, "Load Project", null, 0, false, false, 1, 0, null, "", false ]

[node name="Graph" type="MenuButton" parent="UI/MenuBar/HBoxContainer"]
margin_left = 39.0
margin_right = 89.0
margin_bottom = 30.0
text = "Graph"
items = [ "Switch Graph", null, 0, false, false, 1, 0, null, "", false, "Add Node", null, 0, false, false, 2, 0, null, "", false ]

[node name="Toolbar" type="HBoxContainer" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -40.0
margin_bottom = -10.0
script = ExtResource( 10 )

[node name="SelectButton" type="Button" parent="UI/Toolbar"]
margin_right = 51.0
margin_bottom = 30.0
toggle_mode = true
text = "Select"
icon_align = 1

[node name="MoveButton" type="Button" parent="UI/Toolbar"]
margin_left = 55.0
margin_right = 102.0
margin_bottom = 30.0
toggle_mode = true
text = "Move"

[node name="InfoPlane" type="Control" parent="UI"]
anchor_left = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 5 )

[node name="SelectionInfo" type="Panel" parent="UI/InfoPlane"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = 0.0261821
script = ExtResource( 3 )

[node name="HeaderPanel" type="Panel" parent="UI/InfoPlane/SelectionInfo"]
anchor_right = 1.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="ColorRect" type="ColorRect" parent="UI/InfoPlane/SelectionInfo/HeaderPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.494118, 0.654902, 1 )

[node name="HeaderLabel" type="Label" parent="UI/InfoPlane/SelectionInfo/HeaderPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Node Information"
align = 1
valign = 1

[node name="Contents" type="VBoxContainer" parent="UI/InfoPlane/SelectionInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 37.0
margin_right = -5.0
margin_bottom = -5.0
custom_constants/separation = 7
alignment = 1

[node name="Name" type="Label" parent="UI/InfoPlane/SelectionInfo/Contents"]
margin_right = 278.0
margin_bottom = 14.0
text = "Name"
align = 1
valign = 1

[node name="Type" type="Label" parent="UI/InfoPlane/SelectionInfo/Contents"]
margin_top = 21.0
margin_right = 278.0
margin_bottom = 35.0
text = "Type"
align = 1
valign = 1

[node name="TabContainer" type="TabContainer" parent="UI/InfoPlane/SelectionInfo/Contents"]
margin_top = 42.0
margin_right = 278.0
margin_bottom = 498.0
size_flags_vertical = 3

[node name="Connections" type="VBoxContainer" parent="UI/InfoPlane/SelectionInfo/Contents/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 4 )

[node name="Entry" type="Panel" parent="UI/InfoPlane/SelectionInfo/Contents/TabContainer/Connections"]
visible = false
margin_right = 270.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
script = ExtResource( 9 )

[node name="Name" type="Label" parent="UI/InfoPlane/SelectionInfo/Contents/TabContainer/Connections/Entry"]
anchor_right = 0.45
anchor_bottom = 1.0
text = "Node name"
align = 1
valign = 1

[node name="Type" type="Label" parent="UI/InfoPlane/SelectionInfo/Contents/TabContainer/Connections/Entry"]
anchor_left = 0.45
anchor_right = 0.75
anchor_bottom = 1.0
text = "Node Type"
align = 1
valign = 1

[node name="SelectButton" type="Button" parent="UI/InfoPlane/SelectionInfo/Contents/TabContainer/Connections/Entry"]
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
text = "Select"

[node name="Notes" type="TextEdit" parent="UI/InfoPlane/SelectionInfo/Contents/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 2 )

[node name="GraphInfo" type="Panel" parent="UI/InfoPlane"]
anchor_right = 1.0
anchor_bottom = 0.5
script = ExtResource( 6 )

[node name="HeaderPanel" type="Panel" parent="UI/InfoPlane/GraphInfo"]
anchor_right = 1.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="ColorRect" type="ColorRect" parent="UI/InfoPlane/GraphInfo/HeaderPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.494118, 0.654902, 1 )

[node name="HeaderLabel" type="Label" parent="UI/InfoPlane/GraphInfo/HeaderPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Graph Information"
align = 1
valign = 1

[node name="Contents" type="VBoxContainer" parent="UI/InfoPlane/GraphInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 37.0
margin_right = -5.0
margin_bottom = -5.0
custom_constants/separation = 7

[node name="Name" type="Label" parent="UI/InfoPlane/GraphInfo/Contents"]
margin_right = 278.0
margin_bottom = 14.0
text = "Name"
align = 1
valign = 1

[node name="Type" type="Label" parent="UI/InfoPlane/GraphInfo/Contents"]
margin_top = 21.0
margin_right = 278.0
margin_bottom = 35.0
text = "Type"
align = 1
valign = 1

[node name="TabContainer" type="TabContainer" parent="UI/InfoPlane/GraphInfo/Contents"]
margin_top = 42.0
margin_right = 278.0
margin_bottom = 498.0
size_flags_vertical = 3

[node name="Nodes" type="VBoxContainer" parent="UI/InfoPlane/GraphInfo/Contents/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 8 )

[node name="Entry" type="Panel" parent="UI/InfoPlane/GraphInfo/Contents/TabContainer/Nodes"]
visible = false
margin_right = 270.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
script = ExtResource( 7 )

[node name="Name" type="Label" parent="UI/InfoPlane/GraphInfo/Contents/TabContainer/Nodes/Entry"]
anchor_right = 0.45
anchor_bottom = 1.0
text = "Node name"
align = 1
valign = 1

[node name="Type" type="Label" parent="UI/InfoPlane/GraphInfo/Contents/TabContainer/Nodes/Entry"]
anchor_left = 0.45
anchor_right = 0.75
anchor_bottom = 1.0
text = "Node Type"
align = 1
valign = 1

[node name="SelectButton" type="Button" parent="UI/InfoPlane/GraphInfo/Contents/TabContainer/Nodes/Entry"]
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
text = "Select"

[node name="GraphManager" parent="." instance=ExtResource( 11 )]

[node name="ToolManager" parent="." instance=ExtResource( 12 )]

[connection signal="pressed" from="UI/Toolbar/SelectButton" to="UI/Toolbar" method="_on_SelectButton_pressed"]
[connection signal="pressed" from="UI/Toolbar/MoveButton" to="UI/Toolbar" method="_on_MoveButton_pressed"]
[connection signal="pressed" from="UI/InfoPlane/SelectionInfo/Contents/TabContainer/Connections/Entry/SelectButton" to="UI/InfoPlane/SelectionInfo/Contents/TabContainer/Connections/Entry" method="_on_SelectButton_pressed"]
[connection signal="focus_entered" from="UI/InfoPlane/SelectionInfo/Contents/TabContainer/Notes" to="UI/InfoPlane/SelectionInfo/Contents/TabContainer/Notes" method="_on_Notes_focus_entered"]
[connection signal="focus_exited" from="UI/InfoPlane/SelectionInfo/Contents/TabContainer/Notes" to="UI/InfoPlane/SelectionInfo/Contents/TabContainer/Notes" method="_on_Notes_focus_exited"]
[connection signal="mouse_entered" from="UI/InfoPlane/SelectionInfo/Contents/TabContainer/Notes" to="UI/InfoPlane/SelectionInfo/Contents/TabContainer/Notes" method="_on_Notes_mouse_entered"]
[connection signal="mouse_exited" from="UI/InfoPlane/SelectionInfo/Contents/TabContainer/Notes" to="UI/InfoPlane/SelectionInfo/Contents/TabContainer/Notes" method="_on_Notes_mouse_exited"]
[connection signal="pressed" from="UI/InfoPlane/GraphInfo/Contents/TabContainer/Nodes/Entry/SelectButton" to="UI/InfoPlane/GraphInfo/Contents/TabContainer/Nodes/Entry" method="_on_SelectButton_pressed"]
